Fixed bug with scrollbar width

--- a/src/app.css
+++ b/src/app.css
@@ -23,3 +23,16 @@ body {
 .mobile-nav-options {
   @apply font-roboto small-caps text-white block font-semibold text-lg hover:text-pink-600 transition-colors p-2 pl-6 whitespace-nowrap;
 }
+
+html {
+  overflow-y: overlay;
+}
+
+::-webkit-scrollbar {
+  width: 5px;
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: rgb(255, 255, 255, 0.1);
+  @apply rounded-md;
+}
